Bug 368440 - Minimize animation does not play on X11 windows under wayland
Summary: Minimize animation does not play on X11 windows under wayland
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://phabricator.kde.org/D2724
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-08 08:15 UTC by CapsAdmin
Modified: 2016-09-14 08:25 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description CapsAdmin 2016-09-08 08:15:23 UTC
as the title says

Reproducible: Always
Comment 1 Martin Flöser 2016-09-08 08:16:52 UTC
For me the unminimize works, but minimize does not.
Comment 2 Martin Flöser 2016-09-09 06:06:37 UTC
Changing the setting "Keep window thumbnails" to "always" makes it also work for minimize. An idea would be to just always use the setting on Xwayland.
Comment 3 Martin Flöser 2016-09-09 10:46:35 UTC
Patch at https://phabricator.kde.org/D2724
Comment 4 Martin Flöser 2016-09-14 08:25:34 UTC
Git commit 0bb1f2e7bf35c8191432e49cf439dd198bf750b7 by Martin Gräßlin.
Committed on 14/09/2016 at 08:23.
Pushed by graesslin into branch 'master'.

Make WindowPixmap::isValid virtual and override in concrete implementation

Summary:
If a buffer gets destroyed the texture created from it is still valid.
In such a situation the OpenGLWindowPixmap should return true for isValid
and not false as it did. Similar in QPainter compositor the pixmap is
valid if there is an image copied from the buffer.

This change ensures that for example minimizing an XWayland window
still has a texture during the minimize animation.

Test Plan:
Minimize animation plays for X windows and minimized windows
are shown in present windows.

Reviewers: #kwin, #plasma_on_wayland

Subscribers: plasma-devel, kwin

Tags: #plasma_on_wayland, #kwin

Differential Revision: https://phabricator.kde.org/D2724

M  +1    -1    scene.h
M  +8    -0    scene_opengl.cpp
M  +1    -0    scene_opengl.h
M  +8    -0    scene_qpainter.cpp
M  +1    -0    scene_qpainter.h

http://commits.kde.org/kwin/0bb1f2e7bf35c8191432e49cf439dd198bf750b7